# TigerFISH

./: .readthedocs.yaml  .readthedocs.yml  2019_10_14_specificity.py  GitHub_Onboarding.md  LICENSE  README.md  Snakefile  bt2_allvall.py  combinedPipeline.py  config.yml  design_probes.py  driver_script.sh  fasta2matrix_function.py  generate_jf_idxs.py  kmer_filter.py  kmer_specificity_repeat_analysis.py  model_performance.py  pDups.py  refactoredBlockparse.py  region_probe_pairs.py  repeatFinder.py  repeat_ID.py  run_designprobes.sh  run_jellyfish.sh  run_jellyfish_max.sh  run_kmerFilter.sh  run_repeatFinder.sh  run_repeatId.sh  select_satellite_probes.py  setup.cfg  snake_batch.sge  snakemake_env.yml  specificity_refactor.py
deprecated_scripts/: 2019_10_14_repeatID.py  combinedPipeline.py  random_fasta_generator.py  specificity.py
docs/: .readthedocs.yaml  README.md  conf.py  index.rst  pipeline_input.md  pipeline_output.md  pipeline_steps.md  readthedocs.yml  requirements.txt  setup.cfg
docs/main/: README.md  nakemake_env) [eaguil@grid-h:q!  pipeline_input.md  pipeline_output.md  pipeline_steps.md
docs/postprocess/: README.md  pipeline_input.md  pipeline_outout.md  pipeline_output.md  pipeline_steps.md
docs/source/: cli.rst  conf.py  faq.rst  index.rst  parameters.rst  snakemake_view.rst  tigerfish_index.rst.rst  tutorials.rst
docs/source/vignettes/: index.rst
docs/tutorial/: index.rst
example_run/: README.md
pareto_analyses/: concat_files.py  run_pareto.sh  survey_pareto.py
phase_1_scripts/: 2019_10_14_design_probes.py  fasta2matrix_pDups_model_clean  jellyfish_max_mer.py  kmerFilterCopyNum.py  kmer_decomp_filter.py  kmer_specificity_repeat_analysis.py  region_probe_pairs.py  splitFasta.py
phase_2_scripts/: config.yaml  design_probes.py
phase_3_scripts/: Snakefile  alignment_nupack_filter.py  generate_jf_idxs.py  kmer_filter.py  probes_filter_refactor_mer.py  refactor_repeatID.py
pipeline_current/: Snakefile  alignment_nupack_filter.py  config.yml  design_probes.py  driver_script.sh  generate_jf_idx.py  kmer_filter.py  probes_filter_refactor_mer.py  snake_batch.sge
shared_conda_envs/: README.md  tigerfish.yml
shell_scripts/: driver_script.sh  run_all_scaffolds.sh  run_kmerCopyNum.sh  run_kmer_decomp.sh  trf_parser.sh
snakemake_scripts/: Snakefile  Snakemake_Analysis  config.yml  driver_script.sh  snake_batch.sge
sun_grid_run_template/: config.yml  run_pipeline.sh
sun_grid_shell_template/: run_pipeline.sh
tigerfish_scripts/: bt2_allvall.py  fasta2matrix_function.py  (+4 more)
(+459 files in other folders)
