[metadata]
name = Tigerfish
author = Robin Aguilar
author_email = eaguil@uw.edu
description = Fast and efficient repeat specific oligo design workflow for repetitive DNA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/beliveau-lab/TigerFISH
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.18.1
    pandas>=1.0.3
    bedtools>=2.29.2
    biopython>=1.77
    bowtie2>=2.3.5.1
    jellyfish>=2.2.10
    numpy>=1.18.5
    pandas>=1.0.5
    pip>=20.1.1
    pybedtools>=0.8.1
    sam2pairwise>=1.0.0
    samtools>=1.9
    scikit-learn>=0.23.1
    scipy>=1.5.0
    zip>=3.0
    nupack>=4
    python>=3.7.8
    matplotlib>=3.3.4
    seaborn>=0.11.1
    pytest>=6.2

[options.extras_require]
docs =
    numpydoc>=1.0.0
    sphinx-argparse>=0.2.5
    sphinx-rtd-theme>=0.5.0
    nbsphinx>=0.7.1
    ipykernel>=5.3.0
    recommonmark>=0.5.0

