[metadata]
name = Tigerfish
version = 1.0.0
license = MIT
description = A scalable tool for the design of repetitive DNA oligonucleotide probes
author = Robin Aguilar
author_email = eaguil@uw.edu
url = https://github.com/beliveau-lab/TigerFISH
classifiers = 
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Intended Audience :: Developers and Users
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
        Programming Language :: R
	Programming Language :: Python :: 3.6

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = Robin Aguilar
github_repo = https://github.com/beliveau-lab/TigerFISH
